@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
 
 package com.sun.media.jfxmedia;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.ArrayList;
 import java.util.List;
@@ -98,7 +97,7 @@ public abstract class Media {
             if (tracks.isEmpty()) {
                 returnValue = null;
             } else {
-                returnValue = Collections.unmodifiableList(new ArrayList<>(tracks));
+                returnValue = List.copyOf(tracks);
             }
         }
         return returnValue;
